Slightly broken but have improved notion of "EvalContext" object, added notion of StreamTypeDefn to handle character strings (sequences).